argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/argocd`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
    middlewares:
    - name: argocd-stripprefix
      namespace: argocd
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-stripprefix
  namespace: argocd
spec:
  stripPrefix:
    prefixes:
      - /argocd
